trunk/Archive2/09/c517d0ead4c024/output
main.cpp: In instantiation of 'void map_insert(std::map<RK, RV>&, PK&&, PV&&) [with RK = announcer; RV = announcer; PK = double; PV = announcer]':
main.cpp:33:37:   required from here
main.cpp:7:5: error: static assertion failed: implicit conversions disallowed for the key!
     static_assert(std::is_same<RK,typename std::decay<PK>::type>::value, "implicit conversions disallowed for the key!");
     ^
